<resources>
    <string name="app_name">EasyProfiles</string>
    <string name="action_settings">Einstellungen</string>
    <string name="notification_active_profile">Aktives Profil: </string>
    <string name="activity_logs">Application Logs</string>

    <string name="ringtone_mode_normal">Normal</string>
    <string name="ringtone_mode_silent">Lautlos</string>
    <string name="ringtone_mode_vibrate">Vibrieren</string>

    <string name="navigation_header">EasyProfiles</string>

    <!-- profiles -->
    <string name="activity_profilelist">Profile</string>
    <string name="activity_profile_selection">Auswahl: Profil</string>
    <string name="profilelist_add_hint">Neues Profil hinzufügen</string>
    <string name="profilelist_edit_hint">Profil bearbeiten </string>

    <string name="empty_list_view_profiles_title">Keine Profile gefunden</string>
    <string name="empty_list_view_profiles_text">Du hast noch keine Profile erstellt. Benutze den Knopf zum Hinzufügen neuer Profile..</string>

    <string name="activation_profile_tab">Aktivierung</string>
    <string name="deactivation_profile_tab">Deaktivierung</string>
    <string name="profilescheduler_save_button">Fertig</string>
    <string name="profilescheduler_cancel_button">Abbrechen</string>

    <string name="editprofile_volume_set_to">Gesetzt auf {value} / {maxValue}</string>
    <string name="editprofile_name">Name</string>
    <string name="editprofile_section_volume">Lautstärke festlegen</string>
    <string name="editprofile_alarm_volume">Alarm</string>
    <string name="editprofile_media_volume">Medien</string>
    <string name="editprofile_ringtone_volume">Klingelton</string>
    <string name="editprofile_notification_volume">Benachrichtigungen</string>
    <string name="editprofile_ringtone_and_notification_volume">Klingelton &amp; Benachrichtigungen</string>
    <string name="editprofile_ringtone_mode">Soundprofil</string>
    <string name="editprofile_cancel_button">Zurück</string>
    <string name="editprofile_save_button">Fertig</string>
    <string name="editprofile_menu_delete">Löschen</string>
    <string name="editprofile_info_delete_successful">Profile erfolgreich gelöscht.</string>

    <!-- triggers -->
    <string name="activity_triggerlist">Auslöser</string>
    <string name="activity_location_trigger_incomplete_error_title">Fehler beim Anlegen</string>
    <string name="activity_location_trigger_incomplete_error_message">Der Ortsbezogene Auslöser konnte nicht angelegt werden. Unvollständige Eingabe.</string>
    <string name="triggerlist_item_deleted">Auslöser Entfernt</string>
    <string name="triggerlist_item_undo">Rückgängig</string>
    <string name="empty_list_view_trigger_title">Keine Auslöser gefunden</string>
    <string name="empty_list_view_trigger_text">Du hast noch keine Auslöser konfiguriert. Benutze den Knopf zum Hinzufügen neuer Auslöser.</string>
    <string name="wifi_trigger_activation_label">Beim Verbinden: </string>
    <string name="wifi_trigger_deactivation_label">Beim Trennen: </string>
    <string name="location_trigger_location_label">Ort: </string>
    <string name="location_trigger_entrance_label">Beim Betreten: </string>
    <string name="location_trigger_exit_label">Beim Verlassen: </string>

    <string name="activity_trigger_type_selection">Auswahl: Auslöser</string>
    <string name="trigger_type_adapter_wifi">Beim Verbinden/Trennen von Wifi Netzwerken</string>
    <string name="trigger_type_adapter_time">Zeitgesteuert</string>
    <string name="trigger_type_adapter_location">Ortsgebunden</string>

    <string name="activity_wifi_trigger_incomplete_error_title">Fehler beim Anlegen</string>
    <string name="activity_wifi_trigger_incomplete_error_message">Der Wifi Auslöser konnte nicht angelegt werden. Unvollständige Eingabe.</string>
    <string name="activity_wifi_selection">Wifi Auswählen</string>
    <string name="empty_list_view_wifi_title">Kein konfiguriertes Wifi gefunden</string>
    <string name="empty_list_view_wifi_text">Verbinde dich zunächst mit einem Wifi um dies dann hier auswählen zu können.</string>

    <string name="activity_locationlist">Orte</string>
    <string name="activity_locationlist_label_lat">Lat:</string>
    <string name="activity_locationlist_label_lon">Lon:</string>
    <string name="activity_locationlist_radius_in_title">m Radius</string>

    <string name="activity_pick_location">Ort auswählen</string>
    <string name="activity_pick_location_hint_name">Name</string>
    <string name="activity_pick_location_label_radius">Radius: %s m</string>
    <string name="activity_pick_location_label_finish">Übernehmen</string>

    <!-- dialogs -->
    <string name="edittextdialog_title">Umbenennen</string>
    <string name="edittextdialog_ok_button">OK</string>
    <string name="edittextdialog_cancel_button">Abbrechen</string>

    <!-- days -->
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Di</string>
    <string name="wednesday_short">Mi</string>
    <string name="thursday_short">Do</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">So</string>
    <string name="title_activity_location_list">LocationListActivity</string>

    <!-- card view -->
    <string name="CardViewDelete">Löschen</string>
</resources>
