<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.iweinzierl.easyprofiles.PickLocationActivity"
    tools:showIn="@layout/activity_pick_location">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_pick_location_hint_name" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_above="@+id/radius_wrapper"
        android:layout_alignEnd="@+id/radius_wrapper"
        android:layout_alignParentStart="true"
        android:layout_below="@id/name" />

    <LinearLayout
        android:id="@+id/radius_wrapper"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/radius_value"
            style="@style/AppTheme.SettingsView.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_pick_location_label_radius" />

        <SeekBar
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="250" />

    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:text="@string/activity_pick_location_label_finish"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
