<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.List.Item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/trigger_type"
            style="@style/AppTheme.List.Item.PrimaryIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/location_48px" />

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/locationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location_trigger_location_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Activation Profile"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entranceContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location_trigger_entrance_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profile_activation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Entrance Profile"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exitContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location_trigger_exit_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profile_deactivation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Exit Profile"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <Switch
            android:id="@+id/enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false" />

    </LinearLayout>

    <!-- swipe to dismiss layout -->
    <LinearLayout
        style="@style/AppTheme.List.SwipeDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_delete"
            style="@style/AppTheme.List.SwipeDelete.InfoText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center_vertical"
            android:hapticFeedbackEnabled="true"
            android:text="@string/triggerlist_item_deleted" />

    </LinearLayout>

</FrameLayout>